--- a/src/components/TagManager/TagManager.scss
+++ b/src/components/TagManager/TagManager.scss
@@ -1,27 +1,24 @@
 @use "../../styles" as *;
 
 .TagManager {
-	border: 1px dashed red;
 	ul {
 		margin-bottom: 0;
 	}
-	.tag-list, li, .Button {
+	.tag-list, li {
 		display: inline-block;
 	}
 	.tag-list {
 		display: inline-block;
 		padding: $sizes-s1;
-		line-height: 2;
+		line-height: 2.3;
 		> li {
 			margin-right: $sizes-s2;
 		}
 	}
 	.Button {
-		vertical-align: middle;
 		margin-right: $sizes-s1;
 	}
 	.Icon {
-		vertical-align: middle;
 		color: $colors-white;
 	}
 }
