--- a/src/elements/Tag/Tag.scss
+++ b/src/elements/Tag/Tag.scss
@@ -7,4 +7,5 @@
   padding: 0 $sizes-s3 $sizes-s1 $sizes-s3;
   border-radius: $borders-radius;
 	white-space: nowrap;
+	@include shadows-small;
 }
